--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["Mark J <ima9rd@gmail.com>"]
 
 [dependencies]
 reqwest = "0.9.5"
+serde_json = "1.0.33"
+serde_derive = "1.0.80"
+serde = "1.0.80"
+glob = "0.2.11"
+version-compare = "0.0.6"
